# bunny-scroller

./: .gitignore  README.md  pyproject.toml
bunny_frames/: __init__.py  w32_right_frames.py
bunny_frames/frame_0/: w40_frames.py
bunny_frames/frame_2/: w40_frames.py
bunny_frames/right/frame_0/: w32_frames.py  w40_frames.py
bunny_frames/right/frame_1/: __init__.py  w32_frames.py  w40_frames.py
bunny_frames/right/frame_2/: __init__.py
bunny_frames/right/frame_3/: w32_frames.py  w40_frames.py
demos/: README.md  bunny_anim.py  bunny_animation.py  combined_anim.py  demo_asciimatics.py  demo_blessed.py  demo_curses.py  tree_anim.py  tree_zoom_anim.py
frames/bunny/: w40_frames.py  w40_right_frames.py
frames/bunny/frame_1/: w40_frames.py
frames/bunny/frame_3/: w40_frames.py
frames/bunny/right/frame_0/: __init__.py
frames/bunny/right/frame_2/: w32_frames.py  w40_frames.py
frames/bunny/right/frame_3/: __init__.py
frames/tree/: w100_frames.py  w20_frames.py
tools/: export_frames_ts.py  generate_combined_html.py  generate_html.py  gif_to_ascii.py
tree_frames/: __init__.py  w58_frames.py
web/: AsciiBackground.tsx  ascii_background.html  combined.html  tree_zoom.html
