[project]
name = "bunny-scroller"
version = "0.1.0"
description = "A terminal-based side-scrolling game with emoji graphics"
authors = [
    {name = "austi"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "blessed (>=1.28.0,<2.0.0)",
    "wcwidth (>=0.5.0,<0.6.0)",
    "asciimatics (>=1.15.0,<2.0.0)",
    "windows-curses (>=2.4.1,<3.0.0) ; python_version >= \"3.10\"",
    "opencv-python (>=4.13.0.90,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
